--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@pedroslopez/moduleraid": "^5.0.2",
+    "@juliopreguia//moduleraid": "^5.0.2",
     "moment-timezone": "^0.5.45",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": ""
